--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -266,11 +266,13 @@
     display: inline;
     vertical-align: middle;
 
-    > span {
-        margin-left: $input-padding-y;
-        svg {
-            path {
-                fill: $green-tint01;
+    .locatie-container & {
+        > span {
+            margin-left: $input-padding-y;
+            svg {
+                path {
+                    fill: $green-tint01;
+                }
             }
         }
     }
