--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -38,20 +38,22 @@
                     position: absolute;
                     display: block;
                     top: 2.2em;
-                    transform: translateY(0);
+                    transform: scale(0.98, 0.98);
                     right: 1vw;
                     padding: 0;
                     box-shadow: 0 4px 10px 1px rgba(0, 0, 0, 0.25);
                     opacity: 0;
                     pointer-events: none;
-                    transition: opacity $transition-duration-default $transition-ease-default;
+                    transition: all $transition-duration-default $transition-ease-default;
+                    transform-origin: right top;
                     transition-delay: 0.15s;
                     background-color: $white;
 
                     &--large {
                         width: 98vw;
                         max-width: 400px;
-                        // opacity: 1;
+                        opacity: 1;
+                        pointer-events: all;
                     }
 
                     &:before {
@@ -83,8 +85,9 @@
                 &:not(.no-hover):focus-within {
                     .content {
                         opacity: 1;
+                        transform: scale(1, 1);
                         pointer-events: all;
-                        transition: opacity $transition-duration-default $transition-ease-default;
+                        transition: all $transition-duration-default $transition-ease-default;
                     }
                 }
             }
