--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -320,5 +320,8 @@
             background-color: $primary;
             border-radius: 100%;
         }
+        .is-watched .dot {
+            display: none;
+        }
     }
 }
