teruglezen-notificaties: dynamic notificatie count, mark as read

--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -327,5 +327,8 @@
             background-color: $primary;
             border-radius: 100%;
         }
+        .is-watched .dot {
+            display: none;
+        }
     }
 }
