--- a/app/apps/release_notes/templates/public/notificaties/profiel_notificatie_lijst.html
+++ b/app/apps/release_notes/templates/public/notificaties/profiel_notificatie_lijst.html
@@ -3,7 +3,7 @@
       class="trigger--notificationslist">
     {% include "public/notificaties/profiel_notificatie_lijst_aantal_ongezien.html" with aantal=ongezien_aantal|length only %}
 </span>
-<div class="container__profiel_notificatie_lijst">
+<div class="container__profiel_notificatie_lijst content content--large">
     <header>
         <h2 class="h3" id="profiel_notificatie_lijst_aantal">
             {% include "public/notificaties/profiel_notificatie_lijst_aantal.html" with aantal=object_list|length only %}
