--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -22,9 +22,11 @@
 
         .container__user {
             padding: 1em 0.5em 1em 1.2em;
+            display: flex;
 
             .container__uitklapper {
                 position: unset;
+                flex: 1;
                 > span {
                     font-weight: 700;
                     text-decoration: none;
@@ -37,7 +39,7 @@
                 .content {
                     position: absolute;
                     display: block;
-                    top: 2.2em;
+                    top: 0;
                     transform: scale(0.98, 0.98);
                     right: 1vw;
                     padding: 0;
@@ -52,8 +54,12 @@
                     &--large {
                         width: 98vw;
                         max-width: 400px;
-                        opacity: 1;
-                        pointer-events: all;
+                        // opacity: 1;
+                        // pointer-events: all;
+                    }
+
+                    &:not(.container__profiel_notificatie_lijst) {
+                        top: 2.2em;
                     }
 
                     &:before {
@@ -95,6 +101,9 @@
             @media (min-width: map-get($grid-breakpoints, md)) {
                 .container__uitklapper {
                     position: relative;
+                    &:first-child {
+                        // margin-right: 5em;
+                    }
 
                     .content {
                         right: -5px;
@@ -108,6 +117,11 @@
             small {
                 @extend .visually-hidden;
             }
+        }
+
+        .trigger--block {
+            display: inline-block;
+            width: 2em;
         }
     }
 }
@@ -126,13 +140,21 @@
 }
 
 .trigger--notificationslist {
+    position: absolute;
+    right: 0;
+    top: -1.9em;
     svg {
         vertical-align: text-top;
         path {
             fill: $black;
         }
         @media (min-width: map-get($grid-breakpoints, md)) {
-            padding-left: 2em;
+            // padding-left: 2em;
         }
+    }
+
+    .badge--unread-count {
+        transform: translate(-50%, -50%);
+        background-color: $primary;
     }
 }
