--- a/app/apps/release_notes/templates/public/notificaties/profiel_notificatie_lijst_aantal.html
+++ b/app/apps/release_notes/templates/public/notificaties/profiel_notificatie_lijst_aantal.html
@@ -1,5 +1,7 @@
+{% load random_int from berichten_tags %}
 <turbo-stream action="update" target="profiel_notificatie_lijst_aantal">
 <template>
-    Notificaties <small>({{ aantal }})</small>
+    Notificaties <small data-notificaties--manager-snack-overzicht-aantal-value="{{ aantal }}"
+        data-rand="{% random_int 1 10 %}">({{ aantal }})</small>
 </template>
 </turbo-stream>
